RegressionTests/TestSuiteExport/reject/local_storage_class.blade
// EXPECT: fail
// DIAGNOSTICS: InvalidLocalStorageClass

fn f() void {
    cog var x: u32 = 0;
}